--- a/public/assets/stylesheets/sass/global/base/variables.sass
+++ b/public/assets/stylesheets/sass/global/base/variables.sass
@@ -17,7 +17,7 @@ $gray:                   lighten(#000, 33.5%) // #555
 $gray-light:             lighten(#000, 46.7%) // #777
 $gray-lighter:           lighten(#000, 93.5%) // #eee
 
-$brand-primary:         #428bca
+$brand-primary:         #ffe616
 $brand-success:         #5cb85c
 $brand-info:            #5bc0de
 $brand-warning:         #f0ad4e
@@ -45,7 +45,7 @@ $link-hover-color:      darken($link-color, 15%)
 
 $font-family-brand:       "Pacifico", "Open Sans", Helvetica, Arial, sans-serif
 $font-family-sans-serif:  "Open Sans", Helvetica, Arial, sans-serif
-$font-family-serif:       Georgia, "Times New Roman", Times, serif
+$font-family-serif:       "Bitters", Georgia, "Times New Roman", Times, serif
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace
 $font-family-base:        $font-family-sans-serif
