--- a/public/assets/stylesheets/sass/global/base/variables.sass
+++ b/public/assets/stylesheets/sass/global/base/variables.sass
@@ -80,9 +80,9 @@ $headings-color:          inherit
 //** Load fonts from this directory.
 $icon-font-path: "../fonts/"
 //** File name for all font files.
-$icon-font-name:          "glyphicons-halflings-regular"
+$icon-font-name:          "panelando-icons"
 //** Element ID within SVG icon file.
-$icon-font-svg-id:        "glyphicons_halflingsregular"
+$icon-font-svg-id:        "panelando_icons"
 
 
 //== Components
