--- a/public/assets/stylesheets/sass/style.sass
+++ b/public/assets/stylesheets/sass/style.sass
@@ -2,4 +2,5 @@
 @import 'global/vendor/bootstrap'
 
 @import 'global/components/carousel'
+@import 'global/components/navbar'
 @import 'global/components/recipe-block'
