--- a/public/assets/stylesheets/sass/global/components/_recipe-block.sass
+++ b/public/assets/stylesheets/sass/global/components/_recipe-block.sass
@@ -26,22 +26,14 @@
 .recipe-block
   a:hover
     text-decoration: none
-  &:hover .caption
+  &:hover .recipe-caption
     -webkit-animation: bounceDownIn 400ms ease-out
     -moz-animation: bounceDownIn 400ms ease-out
     -o-animation: bounceDownIn 400ms ease-out
     animation: bounceDownIn 400ms ease-out
     opacity: 1
-
-  .caption
-    -webkit-animation: bounceDownOut 200ms ease-out
-    -moz-animation: bounceDownOut 200ms ease-out
-    -o-animation: bounceDownOut 200ms ease-out
-    animation: bounceDownOut 200ms ease-out
-    opacity: 0
-
   
-.recipe-block-title
+.recipe-title
   padding: 12px
   background: $brand-primary
   font-family: $font-family-serif
@@ -50,14 +42,29 @@
   text-align: center
   color: $gray-dark
 
-.recipe-block-image
+.recipe-image
   position: relative
   overflow: hidden
 
-  .caption
-    width: 100%
-    height: 100%
-    position: absolute
-    padding: 20px
-    background: $brand-primary
-    color: white
+.recipe-caption
+  width: 100%
+  height: 100%
+  position: absolute
+  padding: 20px
+  background: $brand-primary
+  color: white
+  -webkit-animation: bounceDownOut 200ms ease-out
+  -moz-animation: bounceDownOut 200ms ease-out
+  -o-animation: bounceDownOut 200ms ease-out
+  animation: bounceDownOut 200ms ease-out
+  opacity: 0
+
+  .item
+    margin-top: 20px
+
+    i
+      margin-right: 24px
+      font-size: 35px
+    span
+      font-family: $font-family-serif
+      font-size: 25px
