Add bourbon sass mixin framework

--- a/public/assets/stylesheets/sass/style.sass
+++ b/public/assets/stylesheets/sass/style.sass
@@ -1,5 +1,6 @@
 @import 'global/base/variables'
 @import 'global/vendor/bootstrap'
+@import 'global/vendor/bourbon'
 
 @import 'global/components/carousel'
 @import 'global/components/navbar'
