--- a/public/assets/stylesheets/sass/global/components/_recipe-block.sass
+++ b/public/assets/stylesheets/sass/global/components/_recipe-block.sass
@@ -1,39 +1,41 @@
-@-webkit-keyframes bounceDownIn
++keyframes(bounceDownIn)
   0%
-    -webkit-transform: translateY(-100%)
+    +transform(translateY(-100%))
 
   60%
-    -webkit-transform: translateY(0%)
+    +transform(translateY(0%))
 
   80%
-    -webkit-transform: translateY(-5%)
+    +transform(translateY(-5%))
 
   100%
-    -webkit-transform: translateY(0%)
+    +transform(translateY(0%))
 
-@-webkit-keyframes bounceDownOut
++keyframes(bounceDownOut)
   0%
-    -webkit-transform: translateY(0%)
+    +transform(translateY(0%))
     opacity: 1
 
   90%
     opacity: 1    
 
   100%
-    -webkit-transform: translateY(-100%)
+    +transform(translateY(-100%))
     opacity: 0
 
 .recipe-block
+  +clearfix()
+
   a:hover
     text-decoration: none
+
   &:hover .recipe-caption
-    -webkit-animation: bounceDownIn 400ms ease-out
-    -moz-animation: bounceDownIn 400ms ease-out
-    -o-animation: bounceDownIn 400ms ease-out
-    animation: bounceDownIn 400ms ease-out
+    +animation(bounceDownIn 400ms ease-out)
     opacity: 1
   
 .recipe-title
+  +clearfix()
+  +border-top-radius($border-radius-base)
   padding: 12px
   background: $brand-primary
   font-family: $font-family-serif
@@ -47,17 +49,14 @@
   overflow: hidden
 
 .recipe-caption
+  +animation(bounceDownOut 200ms ease-out)
   width: 100%
   height: 100%
   position: absolute
   padding: 20px
+  opacity: 0
   background: $brand-primary
   color: white
-  -webkit-animation: bounceDownOut 200ms ease-out
-  -moz-animation: bounceDownOut 200ms ease-out
-  -o-animation: bounceDownOut 200ms ease-out
-  animation: bounceDownOut 200ms ease-out
-  opacity: 0
 
   .item
     margin-top: 20px
@@ -68,3 +67,31 @@
     span
       font-family: $font-family-serif
       font-size: 25px
+
+.recipe-footer
+  +clearfix()
+  +border-bottom-radius($border-radius-base)
+  padding: 12px
+  margin-bottom: 90px
+  box-shadow: 0 2px 2px rgba(11, 25, 28, 0.1)
+  border: 1px solid #e4e4e4
+
+  strong, em
+    display: block
+    color: $gray
+
+  .link
+    float: right
+    padding: 5px 7px
+    background: white
+    border-radius: $border-radius-base
+    border: 2px solid $brand-primary
+    font-family: $font-family-serif
+    font-size: 16px
+    color: $gray
+    &:hover
+      background: $brand-primary
+      color: $gray-dark
+      text-decoration: underline
+      i
+        text-decoration: none
