--- a/public/assets/stylesheets/sass/global/components/_recipe-block.sass
+++ b/public/assets/stylesheets/sass/global/components/_recipe-block.sass
@@ -85,7 +85,7 @@
     padding: 5px 7px
     background: white
     border-radius: $border-radius-base
-    border: 2px solid $brand-primary
+    border: 2px solid $gray
     font-family: $font-family-serif
     font-size: 16px
     color: $gray
