--- a/public/assets/stylesheets/sass/global/components/_navbar.sass
+++ b/public/assets/stylesheets/sass/global/components/_navbar.sass
@@ -6,6 +6,6 @@
 		font-family: $font-family-brand
 		font-size: 45px
 
-	> li > a
+	.navbar-nav > li > a
 		padding-top: 30px
 		padding-bottom: 30px
