--- a/public/assets/stylesheets/sass/style.sass
+++ b/public/assets/stylesheets/sass/style.sass
@@ -3,5 +3,6 @@
 @import 'global/vendor/bourbon'
 
 @import 'global/components/carousel'
+@import 'global/components/main-menu'
 @import 'global/components/navbar'
 @import 'global/components/recipe-block'
