--- a/public/assets/stylesheets/sass/style.sass
+++ b/public/assets/stylesheets/sass/style.sass
@@ -6,3 +6,8 @@
 @import 'global/components/main-menu'
 @import 'global/components/navbar'
 @import 'global/components/recipe-block'
+
+@import 'global/layouts/home'
+@import 'global/layouts/receitas'
+@import 'global/layouts/receita-unica'
+@import 'global/layouts/receita-nova'
