--- a/public/assets/stylesheets/sass/global/components/_navbar.sass
+++ b/public/assets/stylesheets/sass/global/components/_navbar.sass
@@ -2,9 +2,25 @@
 	min-height: 80px
 
 	.navbar-brand
+		position: relative
 		padding-top: 28px
 		font-family: $font-family-brand
 		font-size: 45px
+
+	.navbar-brand-icon
+		width: 60px
+		height: 60px
+		position: absolute
+		top: 10px
+		right: -60px
+		background: $brand-primary
+		border-radius: 30px
+		text-align: center
+
+		i
+			font-size: 40px
+			color: $gray
+			line-height: 55px
 
 	.navbar-nav > li > a
 		padding-top: 30px
