--- a/public/assets/stylesheets/sass/global/components/_ingredients-block.sass
+++ b/public/assets/stylesheets/sass/global/components/_ingredients-block.sass
@@ -1,7 +1,9 @@
 .ingredients-block
 
-	input
+	.ingredient-item
 		width: 100%
+		padding-top: 0
+		padding-bottom: 0
 		padding-left: 60px
 		background: url('../images/general/ingredients.png')
 		border: none
@@ -9,6 +11,7 @@
 		font-family: $font-family-serif
 		font-size: 20px
 		color: $gray-dark
+		line-height: 30px
 
 		&,
 		&:focus
@@ -22,3 +25,4 @@
 		font-style: italic
 		color: lighten($gray-light, 7%)
 		text-align: center
+		line-height: 30px
