--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -4,7 +4,7 @@ head
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
   meta(name="viewport", content="width=device-width, initial-scale=1")
-  title Panelando
+  title asdasdasdasdas
 
   //- Bootstrap
   link(href="assets/stylesheets/style.css", rel="stylesheet")
