--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -4,7 +4,7 @@ head
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
   meta(name="viewport", content="width=device-width, initial-scale=1")
-  title asdasdasdasdas
+  title Panelando - Nova Receita
 
   //- Bootstrap
   link(href="assets/stylesheets/style.css", rel="stylesheet")
@@ -16,7 +16,6 @@ head
   link(href="http://fonts.googleapis.com/css?family=Bitter:400,700", rel="stylesheet")
   link(href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400", rel="stylesheet")
   link(href="http://fonts.googleapis.com/css?family=Pacifico", rel="stylesheet")
-
 
 body(class="page-nova-receita")
   nav(class="navbar navbar-default", role="navigation")
