--- a/public/layouts/index.jade
+++ b/public/layouts/index.jade
@@ -48,19 +48,19 @@ body.page-home
         nav.main-menu(role="navigation")
           ul.nav.nav-pills.nav-stacked
             li.active
-              a(href="#")
+              a(href="index.html")
                 |Home
                 div.link-icon
                   i.icon.icon-shop
 
             li
-              a(href="#")
+              a(href="receitas.html")
                 |Receitas
                 div.link-icon
                   i.icon.icon-food-1
 
             li
-              a(href="#")
+              a(href="nova-receita.html")
                 |Nova Receita
                 div.link-icon
                   i.icon.icon-doc-1
