Fix ingredients block

--- a/public/assets/stylesheets/sass/global/components/_ingredients-block.sass
+++ b/public/assets/stylesheets/sass/global/components/_ingredients-block.sass
@@ -5,7 +5,7 @@
 		padding-top: 0
 		padding-bottom: 0
 		padding-left: 60px
-		background: url('../images/general/ingredients.png')
+		background: url(../images/general/ingredients.png)
 		border: none
 		box-shadow: none
 		font-family: $font-family-serif
@@ -18,6 +18,10 @@
 		&,
 		&:focus
 			outline: 0
+
+		&.editing
+			font-style: italic
+			color: $gray-light
 
 	.ingredient-number
 		width: 40px
