Add angular routing

--- a/public/layouts/index.jade
+++ b/public/layouts/index.jade
@@ -17,188 +17,18 @@ head
   link(href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400", rel="stylesheet")
   link(href="http://fonts.googleapis.com/css?family=Pacifico", rel="stylesheet")
 
-body.page-home
-  nav.navbar.navbar-default(role="navigation")
-    div.container
-      //- Brand and toggle get grouped for better mobile display
-      div.navbar-header
-        button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
-          span.sr-only Alternar menu
-          span.icon-bar
-          span.icon-bar
-          span.icon-bar
+body
 
-        a.navbar-brand(href="#") 
-          |Panelando
-          div.navbar-brand-icon
-            i.icon.icon-food-1
-
-      //- Collect the nav links, forms, and other content for toggling
-      div.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
-        ul.nav.navbar-nav.navbar-right
-          li
-            a(href="#") Login
-          li
-            a(href="#") Cadastrar
-
-  div.row
-    div.container
-      div.col-md-4
-        //-- Main menu
-        nav.main-menu(role="navigation")
-          ul.nav.nav-pills.nav-stacked
-            li.active
-              a(href="index.html")
-                |Home
-                div.link-icon
-                  i.icon.icon-shop
-
-            li
-              a(href="receitas.html")
-                |Receitas
-                div.link-icon
-                  i.icon.icon-food-1
-
-            li
-              a(href="nova-receita.html")
-                |Nova Receita
-                div.link-icon
-                  i.icon.icon-doc-1
-
-      div.col-md-8
-        //-- Display recipe images on a carousel
-        div.carousel.slide(id="carousel-example-generic", data-ride="carousel")
-          //-- Carousel indicators
-          ol.carousel-indicators
-            li.active(data-target="#carousel-example-generic", data-slide-to="0")
-            li(data-target="#carousel-example-generic", data-slide-to="1")
-            li(data-target="#carousel-example-generic", data-slide-to="2")
-
-          //-- Wrapper for slides
-          div.carousel-inner
-            div.item.active
-              img(src="http://dev.munfactory.com/cookbook/images/steak-with-potatoes.jpg", alt="Primeira Receita")
-              div.carousel-caption
-                span.h1 Bife com Batatas
-
-            div.item
-              img(src="http://dev.munfactory.com/cookbook/images/sausage-cabbage-and-tomato-1.jpg", alt="Segunda Receita")
-              div.carousel-caption
-                span.h1 Virado de Repolho
-
-            div.item
-              img(src="http://dev.munfactory.com/cookbook/images/4646066888_397b6d0301_o.jpg", alt="Segunda Receita")
-              div.carousel-caption
-                span.h1 Sanduíche de Filet Mignon
-
-          //- Controls
-          a.carousel-control.left(href="#carousel-example-generic", role="button", data-slide="prev")
-            span.icon.icon-left-open
-
-          a.carousel-control.right(href="#carousel-example-generic", role="button", data-slide="next")
-            span.icon.icon-right-open
-
-  div.row.l-main-section
-    div.container
-      div.col-md-4
-        div.recipe-block
-          a(href="index.html")
-            div.recipe-title
-              |Bife com Batatas
-
-            div.recipe-image
-              div.recipe-caption
-                div.item
-                  i.icon.icon-clock-1
-                  span 15 Min
-
-                div.item
-                  i.icon.icon-user-1
-                  span 6 Porções
-
-                div.item
-                  i.icon.icon-beaker-1
-                  span Fácil
-
-              img.img-responsive(src="assets/images/static/steak-with-potatoes.jpg")
-
-            div.recipe-footer
-              div.pull-left
-                strong Guilherme Coelho
-                em 14/12/2014
-              a.link(href="#")
-                i.icon.icon-plus-squared-alt
-                |Ver Receita
-
-
-      div.col-md-4
-        div.recipe-block
-          a(href="index.html")
-            div.recipe-title
-              |Sanduíche de Filet Mignon
-
-            div.recipe-image
-              div.recipe-caption
-                div.item
-                  i.icon.icon-clock-1
-                  span 15 Min
-
-                div.item
-                  i.icon.icon-user-1
-                  span 6 Porções
-
-                div.item
-                  i.icon.icon-beaker-1
-                  span Fácil
-
-              img.img-responsive(src="assets/images/static/filet-mignon-sandwich.jpg")
-
-            div.recipe-footer
-              div.pull-left
-                strong Guilherme Coelho
-                em 14/12/2014
-              a.link(href="#")
-                i.icon.icon-plus-squared-alt
-                |Ver Receita
-
-
-      div.col-md-4
-        div.recipe-block
-          a(href="index.html")
-            div.recipe-title
-              |Virado de Repolho
-
-            div.recipe-image
-              div.recipe-caption
-                div.item
-                  i.icon.icon-clock-1
-                  span 15 Min
-
-                div.item
-                  i.icon.icon-user-1
-                  span 6 Porções
-
-                div.item
-                  i.icon.icon-beaker-1
-                  span Fácil
-
-              img.img-responsive(src="assets/images/static/sausage-cabbage-and-tomato-1.jpg")
-
-            div.recipe-footer
-              div.pull-left
-                strong Guilherme Coelho
-                em 14/12/2014
-              a.link(href="#")
-                i.icon.icon-plus-squared-alt
-                |Ver Receita
-
+  ng-view
 
   //- jQuery (necessary for Bootstrap"s JavaScript plugins)
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
   //- Include all compiled plugins (below), or include individual files as needed
   script(src="assets/javascripts/bootstrap.min.js")
-  //- Angular framework
+  //- Angular Framework
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js")
+  //- Angular Route
+  script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js")
   //- Angular components
   script(src="app/app.js")
   script(src="app/controllers.js")
