--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -1,23 +1,4 @@
-doctype html
-html(lang="en" ng-app="panelando")
-head
-  meta(charset="utf-8")
-  meta(http-equiv="X-UA-Compatible", content="IE=edge")
-  meta(name="viewport", content="width=device-width, initial-scale=1")
-  title Panelando - Nova Receita
-
-  //- Bootstrap
-  link(href="assets/stylesheets/style.css", rel="stylesheet")
-
-  //- Favicon
-  link(rel="shortcut icon", href="favicon.ico")
-
-  //- Google fonts
-  link(href="http://fonts.googleapis.com/css?family=Bitter:400,700", rel="stylesheet")
-  link(href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400", rel="stylesheet")
-  link(href="http://fonts.googleapis.com/css?family=Pacifico", rel="stylesheet")
-
-body.page-nova-receita
+div.page-nova-receita
   nav.navbar.navbar-default(role="navigation")
     div.container
       //- Brand and toggle get grouped for better mobile display
@@ -49,13 +30,13 @@ body.page-nova-receita
         nav.main-menu(role="navigation")
           ul.nav.nav-pills.nav-stacked
             li
-              a(href="index.html")
+              a(href="/")
                 |Home
                 div.link-icon
                   i.icon.icon-shop
 
             li
-              a(href="receitas.html")
+              a(href="/receitas/")
                 |Receitas
                 div.link-icon
                   i.icon.icon-food-1
@@ -95,15 +76,3 @@ body.page-nova-receita
             ng-keydown="Ingredients.addIngredient($event)"
           )
 
-
-
-  //- jQuery (necessary for Bootstrap"s JavaScript plugins)
-  script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
-  //- Include all compiled plugins (below), or include individual files as needed
-  script(src="assets/javascripts/bootstrap.min.js")
-  //- Angular framework
-  script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js")
-  //- Angular components
-  script(src="app/app.js")
-  script(src="app/controllers.js")
-  script(src="app/directives.js")
