--- a/public/layouts/home.jade
+++ b/public/layouts/home.jade
@@ -29,19 +29,19 @@ div.page-home
         nav.main-menu(role="navigation")
           ul.nav.nav-pills.nav-stacked
             li.active
-              a(href="/")
+              a(href="/#/")
                 |Home
                 div.link-icon
                   i.icon.icon-shop
 
             li
-              a(href="/#/receitas/")
+              a(href="/#/receitas/2")
                 |Receitas
                 div.link-icon
                   i.icon.icon-food-1
 
             li
-              a(href="#/")
+              a(href="/#/receitas/nova")
                 |Nova Receita
                 div.link-icon
                   i.icon.icon-doc-1
