--- a/public/layouts/index.jade
+++ b/public/layouts/index.jade
@@ -31,5 +31,6 @@ body
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js")
   //- Angular components
   script(src="app/app.js")
+  script(src="app/services.js")
   script(src="app/controllers.js")
   script(src="app/directives.js")
